<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:id="@+id/group1" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_places_list"
            android:icon="@drawable/ic_menu_places_list"
            android:title="@string/nav_places_list" />
        <item
            android:id="@+id/nav_my_places"
            android:icon="@drawable/ic_menu_my_reserved"
            android:title="@string/nav_my_places" />
        <item
            android:id="@+id/nav_my_reservations"
            android:icon="@drawable/ic_menu_my_reservations"
            android:title="@string/nav_my_reservations" />
        <item
            android:id="@+id/nav_my_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/nav_my_profile" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@mipmap/ic_power_settings_new_black_48dp"
            android:title="@string/nav_logout" />
    </group>

    <group android:id="@+id/group2" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_about"
            android:icon="@mipmap/ic_info_black_48dp"
            android:title="@string/nav_about" />
    </group>

</menu>
