<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_gravity="center"
    android:padding="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:selectableItemBackground">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp">

        <TextView
            android:text="@string/myAppointmentType"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:id="@+id/myAppointmentType"
            android:layout_marginStart="19dp"
            android:layout_marginTop="14dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:text="@string/myAppointmentAddress"
            android:layout_marginTop="8dp"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:id="@+id/myAppointmentAddress"
            android:layout_below="@+id/myAppointmentType"
            android:layout_alignStart="@+id/myAppointmentType" />

        <TextView
            android:text="@string/myAppointmentPlayers"
            android:layout_marginTop="8dp"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:id="@+id/myAppointmentPlayers"
            android:layout_below="@+id/myAppointmentAddress"
            android:layout_alignStart="@+id/myAppointmentType"
            android:layout_marginBottom="14dp"/>

        <Button
            android:text="@string/myAppointmentConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/myAppointmentPlayers"
            android:layout_alignStart="@+id/myAppointmentPlayers"
            android:id="@+id/myAppointmentConfirm"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="#039be5"/>

        <Button
            android:text="@string/myAppointmentDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/myAppointmentConfirm"
            android:layout_toEndOf="@+id/myAppointmentConfirm"
            android:id="@+id/myAppointmentDelete"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="#039be5"/>

        <TextView
            android:textSize="18sp"
            android:textColor="#212121"
            android:text="@string/myAppointmentID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:id="@+id/myAppointmentID"
            android:layout_marginRight="20dp"
            android:layout_alignBaseline="@+id/myAppointmentAddress"
            android:layout_alignBottom="@+id/myAppointmentAddress"
            android:layout_alignEnd="@+id/myAppointmentDelete" />

    </RelativeLayout>

</android.support.v7.widget.CardView>