<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view_place_reservation"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:selectableItemBackground"
    card_view:cardElevation="3dp"
    android:clipToPadding="false">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/background">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/place_appointment_image"
            android:layout_height="50dp"
            android:layout_width="50dp"
            android:src="@mipmap/ic_launcher"
            android:layout_marginStart="16dp"
            android:layout_alignTop="@+id/place_appointment_sport_name"/>

        <TextView
            android:text="@string/place_appointment_sport_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/place_appointment_sport_name"
            android:layout_marginStart="30dp"
            android:textSize="16sp"
            android:layout_marginTop="14dp"
            android:textIsSelectable="false"
            android:textColor="#212121"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/place_appointment_image"/>

        <TextView
            android:textSize="14sp"
            android:id="@+id/place_appointment_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textIsSelectable="false"
            android:textColor="#757575"
            tools:text="@string/appointment_hours_end"
            android:layout_marginLeft="-7dp"
            android:textAppearance="@style/TextAppearance.StatusBar.EventContent.Info"
            android:layout_toEndOf="@+id/place_appointment_start"
            android:layout_alignBaseline="@+id/place_appointment_start"/>

        <TextView
            android:textSize="14sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textIsSelectable="false"
            android:layout_marginEnd="16dp"
            tools:text="@string/place_appointment_date"
            android:id="@+id/place_appointment_date"
            android:textAppearance="@style/TextAppearance.StatusBar.EventContent.Info"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="14dp"
            android:layout_below="@+id/place_appointment_sport_name"
            android:layout_alignStart="@+id/place_appointment_sport_name" />

        <TextView
            android:textSize="14sp"
            android:id="@+id/place_appointment_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textIsSelectable="false"
            android:textColor="#757575"
            android:layout_marginRight="10dp"
            tools:text="@string/reservationStart"
            android:textAppearance="@style/TextAppearance.StatusBar.EventContent.Info"
            android:layout_toEndOf="@+id/place_appointment_date"
            android:layout_alignBaseline="@+id/place_appointment_date"
            />

        <TextView
            android:text="@string/placeUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/place_appointment_image"
            android:layout_alignStart="@+id/place_appointment_image"
            android:layout_marginTop="20dp"
            android:id="@+id/place_appointment_user_main" />

        <TextView
            android:text="@string/placeOtherUsers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/place_appointment_user_main"
            android:layout_alignStart="@+id/place_appointment_user_main"
            android:layout_marginTop="8dp"
            android:id="@+id/place_appointment_other_users" />

        <TextView
            android:textSize="18sp"
            android:textColor="#212121"
            android:text="@string/placeAppointmentID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:id="@+id/place_appointment_id"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="40dp"/>

        <Button
            android:text="@string/appointmentDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:id="@+id/place_appointment_delete"
            android:layout_marginTop="140dp"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="#039be5"/>

    </RelativeLayout>

</android.support.v7.widget.CardView>