<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txiPlaceName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="17dp"
            android:layout_marginTop="10dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etPlaceName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txiPlaceName"
                android:layout_centerHorizontal="true"
                android:ems="10"
                android:hint="@string/place_name"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txiPlaceAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/txiPlaceName"
            android:layout_below="@+id/txiPlaceName"
            android:layout_marginBottom="17dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etPlaceAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/place_address"
                android:inputType="textMultiLine" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txiPlaceNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/txiPlaceAddress"
            android:layout_below="@+id/txiPlaceAddress"
            android:layout_marginBottom="17dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etPlaceNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/place_number"
                android:inputType="phone" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txiPlaceWorkingHoursStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/txiPlaceNumber"
            android:layout_below="@+id/txiPlaceNumber"
            android:layout_marginBottom="17dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etPlaceWorkingHoursStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/place_working_hours_start"
                android:inputType="time" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txiPlaceWorkingHoursStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/txiPlaceWorkingHoursStart"
            android:layout_below="@+id/txiPlaceWorkingHoursStart"
            android:layout_marginBottom="17dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etPlaceWorkingHoursStop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/place_working_hours_end"
                android:inputType="time" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/txiPlaceImageUrl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/txiPlaceWorkingHoursStop"
            android:layout_below="@+id/txiPlaceWorkingHoursStop"
            android:layout_marginBottom="17dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etPlaceImageUrl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/place_image_link"
                android:inputType="textWebEditText" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/buttonPlaceAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PlaceAdd"
            tools:ignore="RtlHardcoded"
            android:layout_below="@+id/PlaceAddPicture"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:text="@string/tvPlacePeriod"
            android:layout_marginTop="30dp"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/buttonPlaceAdd"
            android:textAlignment="center"
            android:id="@+id/tvPlacePeriod" />

        <Button
            android:text="@string/PlaceAddPicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/PlaceAddPicture"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_below="@+id/txiPlaceImageUrl"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="17dp"/>

    </RelativeLayout>

</ScrollView>